--- a/.github/workflows/lab2-workflow.yml
+++ b/.github/workflows/lab2-workflow.yml
@@ -22,4 +22,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Printing Custom Message
-        run: echo ${{ inputs.custom_message }} #end
+        run: echo ${{ inputs.custom_message }}
+
+      - name: Printing run-job boolean value
+        if: ${{ inputs.run-job == 'true' }}
+        run: echo ${{ inputs.run-job }}
+        #end
